2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-thumbnailer/tracker-thumbnailer.c: Use GChecksum instead
	of shipped MD5 implementation.
	* src/tracker-thumbnailer/Makefile.am:
	* src/tracker-thumbnailer/md5.[ch]: Removed MD5 implementation, no 
	longer necessary.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* data/sqlite-stored-procs.sql: Use '#' to begin comments.
	* src/libtracker-db/tracker-db-manager.c (load_prepared_queries): Skip
	lines that begin with '#'.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-thumbnailer/Makefile.am: Install thumbnailer in libexec.
	* src/tracker-indexer/Makefile.am:
	* tests/tracker-indexer/Makefile.am: define LIBEXECDIR
	* src/tracker-indexer/tracker-metadata-utils.c
	(tracker_metadata_query_file) (tracker_metadata_utils_get_thumbnail):
	Use LIBEXECDIR to locate both tracker-extract and tracker-thumbnailer.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer.c (create_update_item): Avoid
	potential double frees.

2008-08-28  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata-utils.c
	(tracker_metadata_watch_cb): Rename to process_watch_cb() and make
	generic to all spawned processes, so we don't leave defunct processes
	all around.

2008-08-27  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/tracker-ontology.c:
	(tracker_ontology_get_registered_field_types): Removed wrong
	g_critical, the categories can have "empty" parent.
	
2008-08-27  Ivan Frade  <ivan.frade@nokia.com>

	* data/services/default.service
	* data/sqlite-service-types.sql
	* data/sqlite-stored-procs.sql
	* data/sqlite-xesam.sql: Added new field to service type
	description called "PropertyPrefix", so we can specify that
	"Document" properties are "Doc:xxx"
	
	* src/libtracker-common/tracker-service.[ch]
	* src/libtracker-db/tracker-db-manager.c: Code to handle the new
	property.

	* src/libtracker-common/tracker-ontology.[ch]